# organ_midi_interface

./: .gitignore  main.py  pyproject.toml  webserver.py
config/: common.yml  hallgrimskirkja.yml
config/organ/: hallgrimskirkja.yml
frontend/: index.html
organ_interface/: helpers.py  midi_workers.py  note_attributes.py  organ.py  stops.py  voices.py
scenes/: scenes.py  song_manager.py
