[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.128.0",
    "loguru>=0.7.3",
    "mido>=1.3.3",
    "numpy>=2.4.1",
    "python-rtmidi>=1.5.8",
    "pyyaml>=6.0.3",
    "uvicorn>=0.40.0",
    "websockets>=16.0",
]
